  feature_default_display value for individual feature types when displayed on
  maps of that type.  
- Added a display/ignore option for individual evidence types
  (evidence_default_display) which is similar to the feature_default_display
  option for features.
- Added a unit granularity for a map type to allow for math with the correct
  significant figures.
- Added color2 option to banding.
- Added the ability to add custom colors to feature glyphs which are outside
  the pre-decided set.
- Added start and stop parameters to View Feature on Map view.
- Added the feature_modification_code option to the feature_type definition in
  the config file which allows code that will modify the look of a feature.
- A network install script is included that will download and install CMap and
  all it's pre-requisites.  It is based on the GBrowse script
  gbrowse_netinstall.pl.
- More robust install options such as directory guessing which was borrowed
  from GBrowse.
- Modified the installer to ask the user if they want to change the options
  individually rather than making them learn an archaic flag system.
- Modified the installer to also allow installing a demo.
- Removed Bio::Perl from the base requirements.
- Deleting objects will also delete their xrefs.
- Increased speed of importing correspondences.
- Tightened up security.
- Modified the internal link generation to only use relative links.
- Changed the word "Crop" to "Show only" for the map arrow pop-ups because it
  was confusing.
- Modified the saved link interface to make it a little more user friendly.
- Modified the feature_details page for clarity.
- Changed the order of the Feature Types in the legend to reflect the order of
  the drawing lanes.
- Removed some of the legend when in clean view.  
- Modified the behavior for a comparative map that no longer has
  correspondences displayed.  Now it will keep the map unless the "Eliminate
  Orphans" button is pressed.